17-glpi.sh e 19-zoneminder.sh, alteração da variável do laço de loop no script: 20-guacamole.sh, atualização dos 
arquivos de configuração do: wordpress.conf e wp-config.php migrados para a versão 6.0 do Wordpress e configuração do
suporte ao HTTPS utilizando o certificado assinado do Apache2, alteração do script: 13-wordpress.sh em relação a edição
dos arquivos de configuração na nova localização do diretório raiz do Wordpress.

29/05/2022 - Robson Vaamonde - Alteração da localização do diretório do banco de dados do Webdav no arquivos de script
00-parametros.sh para: /etc/apache2/webdav/, alteração do arquivo de configuração: webdav.conf alterado a linha do banco
de dados de usuários e senhas de acesso ao diretório Webdav e localização do DAVLockDB.

19/05/2022 - Robson Vaamonde - Adicionando a dependência do Cliente de FTPS no script: 00-parametros.sh do software:
lftp, acrescentado a opção de testar o certificado TLS/SSL do servidor VSFTPd no script: 11-C-openssl-vsftpd.sh.

18/05/2022 - Robson Vaamonde - Melhoria na documentação do script: 00-parametros.sh em relação aos arquivos de Conf's
do OpenSSL e dependência do Bind9 na variável: SSLDEPCA, melhoria nos arquivos: mysqld.cnf e mysql.cnf em relação ao
suporte ao TLS/SSL, acréscimo da cópia e edição do arquivo: mysql.cnf no script: 08-lamp.sh.

14/05/2022 - Robson Vaamonde - Migração do script: 35-openproject.sh da versão 18.04.x para 20.04.x, atualização do
script: 00-parametros.sh com as opções de instalação do OpenProject, atualização do arquivo: openproject.list com o
Source List do OpenProject para a versão 20.04 do Ubuntu.

13/05/2022 - Robson Vaamonde - Criação do arquivo: mysql.conf com as opções dos certificados assinado do MySQL Server,
customização do script: 11-E-openssl-mysql.sh para resolver os problemas de criação e geração dos certificados SSL
do MySQL Server, criação do arquivo: mysql.cnf do cliente do MySQL Server com suporte ao TLS/SSL, acréscimo das