@@ -8,10 +8,10 @@
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Github: https://github.com/vaamonde
 # Data de criação: 02/11/2021
-# Data de atualização: 20/02/2022
-# Versão: 0.12
+# Data de atualização: 30/05/2022
+# Versão: 0.13
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do Netdata v1.32.x
+# Testado e homologado para a versão do Netdata v1.34.x
 #
 # O Netdata é uma ferramenta para visualizar e monitorar métricas em tempo real, 
 # otimizado para acumular todos os tipos de dados, como uso da CPU, atividade do 
@@ -223,6 +223,7 @@ sleep 5
 #
 echo -e "Editando o arquivo de monitoramento apache.conf, pressione <Enter> para editar"
 	# opção do comando read: -s (Do not echo keystrokes)
+	# teste de debug: /usr/libexec/netdata/plugins.d/python.d.plugin debug apache
 	read -s
 	vim /usr/lib/netdata/conf.d/python.d/apache.conf
 echo -e "Arquivo editado com sucesso!!!, continuando com o script...\n"
@@ -230,6 +231,7 @@ sleep 5
 #
 echo -e "Editando o arquivo de monitoramento mysql.conf, pressione <Enter> para editar"
 	# opção do comando read: -s (Do not echo keystrokes)
+	# teste de debug: /usr/libexec/netdata/plugins.d/python.d.plugin debug mysql
 	read -s
 	vim /usr/lib/netdata/conf.d/python.d/mysql.conf
 echo -e "Arquivo editado com sucesso!!!, continuando com o script...\n"
@@ -237,6 +239,7 @@ sleep 5
 #
 echo -e "Editando o arquivo de monitoramento isc_dhcpd.conf, pressione <Enter> para editar"
 	# opção do comando read: -s (Do not echo keystrokes)
+	# teste de debug: /usr/libexec/netdata/plugins.d/python.d.plugin debug isc_dhcpd
 	read -s
 	vim /usr/lib/netdata/conf.d/python.d/isc_dhcpd.conf
 echo -e "Arquivo editado com sucesso!!!, continuando com o script...\n"
@@ -244,6 +247,7 @@ sleep 5
 #
 echo -e "Editando o arquivo de monitoramento tomcat.conf, pressione <Enter> para editar"
 	# opção do comando read: -s (Do not echo keystrokes)
+	# teste de debug: /usr/libexec/netdata/plugins.d/python.d.plugin debug tomcat
 	read -s
 	vim /usr/lib/netdata/conf.d/python.d/tomcat.conf
 echo -e "Arquivo editado com sucesso!!!, continuando com o script...\n"
@@ -253,6 +257,7 @@ echo -e "Editando o arquivo de estatísticas bind_rndc.conf, pressione <Enter> p
 	# opção do comando: &>> (redirecionar a saída padrão)
 	# opção do comando read: -s (Do not echo keystrokes)
 	# opção do comando chown: -v (verbose), :netdata (group netdata)
+	# teste de debug: /usr/libexec/netdata/plugins.d/python.d.plugin debug bind_rndc
 	read -s
 	vim /usr/lib/netdata/conf.d/python.d/bind_rndc.conf
 	chown -v :netdata /etc/bind/rndc.key &>> $LOG
@@ -262,6 +267,7 @@ sleep 5
 #
 echo -e "Editando o arquivo de monitoramento dockerd.conf, pressione <Enter> para editar"
 	# opção do comando read: -s (Do not echo keystrokes)
+	# teste de debug: /usr/libexec/netdata/plugins.d/python.d.plugin dockerd
 	read -s
 	vim /usr/lib/netdata/conf.d/python.d/dockerd.conf
 echo -e "Arquivo editado com sucesso!!!, continuando com o script...\n"
@@ -269,6 +275,7 @@ sleep 5
 #
 echo -e "Editando o arquivo de monitoramento elasticsearch.conf, pressione <Enter> para editar"
 	# opção do comando read: -s (Do not echo keystrokes)
+	# teste de debug: /usr/libexec/netdata/plugins.d/python.d.plugin debug elasticsearch
 	read -s
 	vim /usr/lib/netdata/conf.d/python.d/elasticsearch.conf
 echo -e "Arquivo editado com sucesso!!!, continuando com o script...\n"
@@ -276,6 +283,7 @@ sleep 5
 #
 echo -e "Editando o arquivo de monitoramento mongodb.conf, pressione <Enter> para editar"
 	# opção do comando read: -s (Do not echo keystrokes)
+	# teste de debug: /usr/libexec/netdata/plugins.d/python.d.plugin mongodb
 	read -s
 	vim /usr/lib/netdata/conf.d/python.d/mongodb.conf
 echo -e "Arquivo editado com sucesso!!!, continuando com o script...\n"
@@ -283,6 +291,7 @@ sleep 5
 #
 echo -e "Editando o arquivo de monitoramento redis.conf, pressione <Enter> para editar"
 	# opção do comando read: -s (Do not echo keystrokes)
+	# teste de debug: /usr/libexec/netdata/plugins.d/python.d.plugin debug redis
 	read -s
 	vim /usr/lib/netdata/conf.d/python.d/redis.conf
 echo -e "Arquivo editado com sucesso!!!, continuando com o script...\n"
