@@ -6,8 +6,8 @@
 # Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
 # Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
 # Data de criação: 02/11/2021
-# Data de atualização: 13/12/2021
-# Versão: 0.06
+# Data de atualização: 30/05/2022
+# Versão: 0.07
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
 # Testado e homologado para a versão do Netdata v1.32.x
 #
@@ -16,20 +16,20 @@
 # Alterar a senha do usuário do Admin do Tomcat para o seu cenário
 localhost:
   name : 'local'
-  url  : 'http://localhost:8080/manager/status?XML=true'
+  url  : 'https://localhost:8443/manager/status?XML=true'
   user : 'admin'
   pass : 'pti@2018'
 #
 # Alterar a senha do usuário do Admin do Tomcat para o seu cenário
 localipv4:
   name : 'local'
-  url  : 'http://127.0.0.1:8080/manager/status?XML=true'
+  url  : 'https://127.0.0.1:8443/manager/status?XML=true'
   user : 'admin'
   pass : 'pti@2018'
 #
 # Alterar a senha do usuário do Admin do Tomcat para o seu cenário
 localipv6:
   name : 'local'
-  url  : 'http://[::1]:8080/manager/status?XML=true'
+  url  : 'https://[::1]:8443/manager/status?XML=true'
   user : 'admin'
   pass : 'pti@2018'
